Fix logo shift issue

--- a/public/stylesheets/govuk-custom-dashboard.css
+++ b/public/stylesheets/govuk-custom-dashboard.css
@@ -16,6 +16,7 @@ body {
 
 .dashboard-body--flex .dashboard-main {
     flex-grow: 1;
+    overflow: hidden;
 }
 
 .dashboard-logo {
